--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ inherits = "release"
 debug = true
 
 [dependencies]
+clap = { version = "4.5.21", features = ["derive"] }
+csv = "1.3.1"
 rand = "0.8.5"
 regex = "1.11.1"
 serde_json = "1.0.132"
