--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ clap = { version = "4.5.21", features = ["derive"] }
 csv = "1.3.1"
 rand = "0.8.5"
 regex = "1.11.1"
+serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.132"
 zip = "2.2.0"
